--- a/src/app/domain/home/home-layout/home-layout.html
+++ b/src/app/domain/home/home-layout/home-layout.html
@@ -1,6 +1,8 @@
 <div class="home-layout">
   <aside class="sidebar">
-    <div class="logo">Spendwise</div>
+    <div class="logo-wrapper">
+      <img [src]="logoPath" alt="Spendwise Logo" />
+    </div>
     <nav>
       <ul>
         @for (item of navItems; track $index) {
